﻿v1.2.1.2
* FIXES
  * Correct Radar display missing graphics when using low quality graphics Git Issue #516.
  * Correct tracer display missing graphics when using low quality graphics.  Git Issue #520.
  * Reintroduce BDAcUniversalAmmoBox Module Manager config file.  Somehow was dropped during a merge somewhere back.

v1.2.1.1
* NEW FEATURES:
  * Added ModuleSpaceRadar.  This limits use of space based radars supporting this module to outside the atmosphere. By DoctorDavinci and Kergan
  * Added Air to ground versions of Air to Air radars.  By SpannerMonkey(smce)
  * Added new explosion effects.  By SpanerMonkey(smce)

* ENHANCEMENTS:
  * Added boundary checking to all moveable windows.  Now windows cannot be positioned off the screen.
  * Added ability to scale Radar Warning Receiver Window.  Scale persists to config file and can be changed in Settings.
  * Redesigned and added ability to scale Radar Window.  Scale persists to config file and can be changed in Settings.
  * Added a toggle to collapse/expand the list of weapons on the Weapon Manager window.
  * Increased the number of range steps in the Radar.  Now can display up to 1000km by default.
  * Added Dynamic range settings to Radar Display based on the max range of the radars in operation.
  * Added close buttons to the upper right of some windows.
  * Added option in Settings to turn off Bullet Hole Decals (may help with performance)

* FIXES
  * Cleaned up obsolete and deprecated unity method calls.
  * Removed MM config 30_bdac_missiles_terminalmaneuvering.cfg.  No longer used.
  * Fixed radar locking in space. Git PR #517. By JRodriguez

v1.2.1
* NEW FEATURES:
  * Recompiled for KSP 1.4.3. 
* FIXES:
  * Fixed model path for Flare & Chaff. Issue #512.

v1.2.0

* NEW FEATURES:
  * Support for Unity 2017. Icons textures fixed by PapaJoe. Thanks to @SpannerMonkey for chaff/smoke models.
  * Compatibility with KSP 1.4.2. 